--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9904a29c",
+   "execution_count": 23,
+   "id": "6da24767",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,13 +112,13 @@
     "import pandas as pd\n",
     "\n",
     "album1 = pd.read_csv(\"Album_example1.csv\")\n",
-    "album1\n"
+    "album1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "aaa8de6b",
+   "execution_count": 24,
+   "id": "42b4c896",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "4        Geffen       0         1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,197 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "73574104",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataframe to set\n",
-    "set_album1 = set(album1[\"Artist\"])\n",
-    "set_album2 = set(album2[\"Artist\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f6b5bd3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Fleetwood Mac',\n",
-       " 'Marvin Gaye ',\n",
-       " 'Stevie Wonder ',\n",
-       " 'The Beach Boys ',\n",
-       " 'The Beatles'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set_album1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e16fc85b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Jimi Hendrix', 'Nirvana', 'Prince and the Revolution ', 'The Beatles'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set_album2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2719eb34",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'The Beatles'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 交集\n",
-    "# RollingStone500大專輯前10名，有4個都是The Beatles的專輯，也只有他們重複獲選\n",
-    "set_album1 & set_album2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "035aa293",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Fleetwood Mac',\n",
-       " 'Jimi Hendrix',\n",
-       " 'Marvin Gaye ',\n",
-       " 'Nirvana',\n",
-       " 'Prince and the Revolution ',\n",
-       " 'Stevie Wonder ',\n",
-       " 'The Beach Boys ',\n",
-       " 'The Beatles'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#聯集\n",
-    "#專輯前10名裡的歌手共有8位\n",
-    "set_album1 | set_album2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ce9ad76d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Fleetwood Mac', 'Marvin Gaye ', 'Stevie Wonder ', 'The Beach Boys '}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#差集\n",
-    "# 前5項只有一項是The Beatles，其他4項是各個不同歌手的專輯\n",
-    "set_album1 - set_album2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "66a441b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Jimi Hendrix', 'Nirvana', 'Prince and the Revolution '}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#差集\n",
-    "#後5項有2項是The Beatles\n",
-    "set_album2 - set_album1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b8908b08",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Fleetwood Mac',\n",
-       " 'Jimi Hendrix',\n",
-       " 'Marvin Gaye ',\n",
-       " 'Nirvana',\n",
-       " 'Prince and the Revolution ',\n",
-       " 'Stevie Wonder ',\n",
-       " 'The Beach Boys '}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#對稱差集\n",
-    "#聯集 - 交集\n",
-    "#除了The Beatles 以外所有入圍前10名的歌手(7位)\n",
-    "set_all = set_album1 | set_album2\n",
-    "set_both = set_album1 & set_album2\n",
-    "set_all - set_both\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a77beec6",
+   "id": "bffe1b88",
    "metadata": {},
    "outputs": [],
    "source": []
