--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6da24767",
+   "id": "f1eb47b1",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "42b4c896",
+   "id": "7bc8d4d5",
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +228,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "29215dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe to set\n",
+    "set_album1 = set(album1[\"Artist\"])\n",
+    "set_album2 = set(album2[\"Artist\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "31810964",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Fleetwood Mac',\n",
+       " 'Marvin Gaye ',\n",
+       " 'Stevie Wonder ',\n",
+       " 'The Beach Boys ',\n",
+       " 'The Beatles'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_album1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "678ce0ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jimi Hendrix', 'Nirvana', 'Prince and the Revolution ', 'The Beatles'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_album2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "73ecac9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'The Beatles'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 交集\n",
+    "# RollingStone500大專輯前10名，有4個都是The Beatles的專輯，也只有他們重複獲選\n",
+    "set_album1 & set_album2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1db5188a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Fleetwood Mac',\n",
+       " 'Jimi Hendrix',\n",
+       " 'Marvin Gaye ',\n",
+       " 'Nirvana',\n",
+       " 'Prince and the Revolution ',\n",
+       " 'Stevie Wonder ',\n",
+       " 'The Beach Boys ',\n",
+       " 'The Beatles'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#聯集\n",
+    "#專輯前10名裡的歌手共有8位\n",
+    "set_album1 | set_album2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a003609a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Fleetwood Mac', 'Marvin Gaye ', 'Stevie Wonder ', 'The Beach Boys '}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#差集\n",
+    "# 前5項只有一項是The Beatles，其他4項是各個不同歌手的專輯\n",
+    "set_album1 - set_album2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bcd45356",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jimi Hendrix', 'Nirvana', 'Prince and the Revolution '}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#差集\n",
+    "#後5項有2項是The Beatles\n",
+    "set_album2 - set_album1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "490676a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Fleetwood Mac',\n",
+       " 'Jimi Hendrix',\n",
+       " 'Marvin Gaye ',\n",
+       " 'Nirvana',\n",
+       " 'Prince and the Revolution ',\n",
+       " 'Stevie Wonder ',\n",
+       " 'The Beach Boys '}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#對稱差集\n",
+    "#聯集 - 交集\n",
+    "#除了The Beatles 以外所有入圍前10名的歌手(7位)\n",
+    "set_all = set_album1 | set_album2\n",
+    "set_both = set_album1 & set_album2\n",
+    "set_all - set_both\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bffe1b88",
+   "id": "cecb950d",
    "metadata": {},
    "outputs": [],
    "source": []
